styles.css
/* Body */

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html, body {
    height: 100%;
    margin: 0;
    overflow-wrap: normal;
    word-break: normal;
    overflow-x: hidden;
}

body {
    background-color: #16161A;
    color: #BCBCE3;
    font-family: 'Noto Sans', sans-serif;
    font-weight:400;
    max-width: 100%;
}

p {
    margin-bottom:2em;
}

main {
    display: flex;
    flex-direction: column;
    justify-content: center;
    flex: 1;
    padding-left:1rem;
}

.wrapper {
    display: flex;
    flex-direction: column;
    min-height: 100svh;
}

#tagline {
    font-size:5rem;
}

#site-description {
    font-size: 1.5rem;
}

footer {
    background-color: #1D1D2B;
    padding: 20px;
    text-align: center;
    border-top: 1px solid #2A2A3D;
    margin-bottom:0;
}


/* Specifics */

input[type=number] {
    background-color: #E3E3FA;
    color: #1D1D2B;
    font-size:inherit;
    font-family: inherit;
    width:400px;
    padding:5px;
    border-radius:7px;
    margin-bottom:25px;
    border: 2px solid white;
}

button {
    background-color: #120A4A;
    color: #E3E3FA;
    font-size: inherit;
    font-family: inherit;
    padding:5px;
    width:120px;
    border-radius:7px;
    border: 2px solid #C5BDDE;
}

button:hover {
    cursor:pointer;
}

a {
    text-decoration: none;
}

table {
    border-collapse: collapse;
    margin-bottom:2em;
}

td, th {
  border: 1px solid #414154;
  text-align: left;
  padding: 8px;
}

/* Header */ 

header {
    height:70px;
    background-color: #1D1D2B;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 20px;
    border-bottom: 1px solid #2A2A3D;
}

#mobile-header {
    display: none;
    flex-direction: row;
    justify-content: space-between;
    visibility: hidden;
}

#app-header {
    display: flex;
}

.title {
    font-size: 2rem;
    color: #BCBCE3;
}

.nav-dropdown {
    display:flex;
}

.nav-item {
    color: #BCBCE3;
    font-size: 18px;
}

.dropdown {
    position: relative;
    color: #BCBCE3;
    font-size: 18px;
    cursor: pointer;
    margin-right:30px;
}

.nav-links {
    background-color: #2e2e41;
    display: none;
    position: absolute;
    background-color: #1D1D2B;
    min-width: 180px;
    z-index: 1;
    left: 0;
    top: 103%;
    border-radius:6px;
}

.dropdown:hover .nav-links {
  display: block;
}

.nav-links a {
    color: #BCBCE3;
    padding: 10px 16px;
    display: block;
}

.nav-links a:hover {
    background-color: #2A2A3D;
    border-radius:6px;
}

.dropdown-title {
    font-size: 20px;
}

.dropdown#dropdown-algorithms .nav-links {
    min-width:150px;
}

/* Mobile header */

.mobile-title {
    font-size: 2rem;
    color: #BCBCE3;
}

.mobile-nav {
    display:flex;
    flex-direction: column;
}

.mobile-nav-item {
    color: #BCBCE3;
    font-size: 18px;
}

.mobile-dropdown {
    position: relative;
    color: #BCBCE3;
    font-size: 18px;
    margin-right:30px;
}

.mobile-nav-links {
    background-color: #2e2e41;
    display: none;
    position: static;
    background-color: #1D1D2B;
    min-width: 150px;
    z-index: 1;
    left: 0;
    top: 103%;
    border-radius:0px 0px 6px 6px;
}

.mobile-dropdown:hover .mobile-nav-links {
  display: block;
}

.mobile-odd-nav {
    border-radius: 6px 6px 0px 0px;
}

.mobile-even-nav {
    border-radius: 0px 0px 6px 6px;
}

.mobile-nav-links a {
    color: #BCBCE3;
    padding: 10px 16px;
    display: block;
}

.mobile-nav-links a:hover {
    background-color: #2A2A3D;
}

.mobile-dropdown-title {
    font-size: 20px;
    background-color: #2e2e41;
    padding: 10px;
}

.mobile-dropdown#mobile-dropdown-algorithms .nav-links {
    min-width:150px;
}

#full-mobile-dropdown {
    visibility: hidden;
    position: absolute;
    min-width: 250px;
    z-index: 1;
    right: -1.7rem;
    left: auto;
    top: 95%;
    border-radius:6px;
}

#mobile-menu-icon {
    position: relative;
    cursor: pointer;
}


#mobile-menu-icon:hover #full-mobile-dropdown {
    visibility: visible;
}

/* Page body */

.page-title {
    font-size:3rem;
}

.content-container {
    max-width: 1000px;
    margin: 0 auto;
    padding: 10px;
}

.page-body {
    font-size:1.15rem;
    line-height:30px;
    margin-top:8px;
    padding-bottom:10px;
}

.message {
    margin-top:10px;
    font-weight:600;
    font-size:19px;
}

.question {
    padding-top:25px;
}

.q-title {
    font-weight:600;
}

.emphasis {
    color: #ff7b72;
    font-weight: bold;
}

.italic {
    font-style: italic;
}

code {
    border-radius:13px;
}

.new-section {
    margin-top:8em;
}

.inline-code {
    color: #1e8bf0;
    font-weight: bold;
    font-size: 20px;
}

math {
    font-family: 'Noto Sans', sans-serif;
    font-size:24px;
}

.page-body a {
    color: #BCBCE3 !important ;
    text-decoration: underline;
}

.page-body a:hover {
    color: #F0F0FF !important;
}

.center-button {
    display: flex;
    justify-content: center;
}

.center {
    display: flex;
    justify-content: center;
}

.indent-one {
    padding-left:2.5ch;
}

.indent-two {
    padding-left:5ch;
}

.indent-three {
    padding-left: 7.5ch;
}

.code-keyword {
    color:#FF7B72;
}

.center-text {
    text-align:center;
}

@media (max-width: 600px) {
  #mobile-header {
    display: flex;
    visibility: visible;
  }

  #app-header {
    display: none;
  }

  .content-container {
    max-width:100%;
  }

  #tagline {
    font-size:4.5rem;
  }

  pre {
    max-width:95%;
  }

  /* Responsive tables */

  	table, thead, tbody, th, td, tr { 
		display: block; 
	}

    th {
        display: none;
    }

	thead tr { 
		position: absolute;
		top: -9999px;
		left: -9999px;
	}
	
	tr { border: 1px solid #ccc; }
	
	td { 
		border: none;
		border-bottom: 1px solid #eee; 
		position: relative;
		padding-left: 50%; 
	}
	
	td:before { 
		position: absolute;
		top: 6px;
		left: 6px;
		width: 45%; 
		padding-right: 10px; 
		white-space: nowrap;
	}

    td:nth-of-type(1):before { content: "Method"; }
	td:nth-of-type(2):before { content: "Data Structure"; }
    td:nth-of-type(3):before { content: "Time Complexity"; }
    td:nth-of-type(4):before { content: "Reason"; }
}

